--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ant-design-vue": "^1.4.12",
+    "bootstrap": "^4.4.1",
+    "bootstrap-vue": "^2.8.0",
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "mapbox-gl": "^1.9.0",
+    "vue": "^2.6.11",
+    "vue-mapbox": "^0.4.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.2.0",
